--- a/templates/default/label/app.html
+++ b/templates/default/label/app.html
@@ -19,7 +19,7 @@
         <div class="content">
             <div class="brand">
                 <a class="logo" href="../index.html" title="电影先生"><img alt="电影先生"
-                                                                           src="../statics/picture/logo-s.png"></a>
+                                                                           src="{{.__STATIC__}}/picture/logo-s.png"></a>
             </div>
 
             <div class="nav-search">
@@ -204,12 +204,12 @@
                         <a class="btn-important btn-large shadow-drop article-btn"
                            href="https://www.dianyi.ng/dianying.apk"><i class="icon-apple"></i>苹果APP下载</a>
                     </p>
-                    <img src="../statics/images/app-download-android.png"><br> &nbsp; 安卓手机扫码下载
+                    <img src="{{.__STATIC__}}/images/app-download-android.png"><br> &nbsp; 安卓手机扫码下载
                     <hr>
-                    <p class="article-imglist"><img src="../statics/images/screenshot/1.png" width="280">
-                        <img src="../statics/images/screenshot/2.png" width="280">
-                        <img src="../statics/images/screenshot/6.png" width="280">
-                        <img src="../statics/images/screenshot/7.png" width="280">
+                    <p class="article-imglist"><img src="{{.__STATIC__}}/images/screenshot/1.png" width="280">
+                        <img src="{{.__STATIC__}}/images/screenshot/2.png" width="280">
+                        <img src="{{.__STATIC__}}/images/screenshot/6.png" width="280">
+                        <img src="{{.__STATIC__}}/images/screenshot/7.png" width="280">
                     </p>
                     <hr>
                     <h2>电影先生</h2>
@@ -235,7 +235,7 @@
     </div>
 </main>
 <footer class="wrapper pd60" id="footer">
-    <p class="sitemap"><img height="10" src="../statics/picture/logo.png">
+    <p class="sitemap"><img height="10" src="{{.__STATIC__}}/picture/logo.png">
         <a href="/about.html" target="_blank">关于</a><span class="space-line-bold"></span>
         <a href="../top.html" target="_blank">排行榜</a><span class="space-line-bold"></span>
         <a href="/map.html" target="_blank">MAP</a><span class="space-line-bold"></span>
