--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -17,7 +17,7 @@
     <div class="header-content  ">
         <div class="content">
             <div class="brand">
-                <a href="index.html" class="logo" title="电影先生"><img src="statics/picture/logo-s.png" alt="电影先生"></a>
+                <a href="index.html" class="logo" title="电影先生"><img src="{{.__STATIC__}}/picture/logo-s.png" alt="电影先生"></a>
             </div>
 
             <div class="nav-search">
@@ -192,7 +192,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放团建吧！七斋"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://0img.hitv.com/preview/sp_images/2023/08/01/202308011138554239683.jpg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="团建吧！七斋">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放团建吧！七斋"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://0img.hitv.com/preview/sp_images/2023/08/01/202308011138554239683.jpg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="团建吧！七斋">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -231,7 +231,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放封神第一部：朝歌风云"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.dianyi.ng/view/photo/s_ratio_poster/public/p2892956776.jpg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神第一部：朝歌风云">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放封神第一部：朝歌风云"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.dianyi.ng/view/photo/s_ratio_poster/public/p2892956776.jpg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神第一部：朝歌风云">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -270,7 +270,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放射雕英雄传之九阴白骨爪"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc002003k947021623264205213/0" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="射雕英雄传之九阴白骨爪">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放射雕英雄传之九阴白骨爪"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc002003k947021623264205213/0" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="射雕英雄传之九阴白骨爪">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放冥海禁地"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="http://pic3.iqiyipic.com/image/20211021/3a/06/v_162950937_m_601_m2_260_360.jpg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="冥海禁地">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放冥海禁地"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="http://pic3.iqiyipic.com/image/20211021/3a/06/v_162950937_m_601_m2_260_360.jpg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="冥海禁地">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -348,7 +348,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放东北插班生"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://pic.dianyi.ng/upload/vod/20220608-1/6779050b7aa6712d96a30a1019f0ce21.jpg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="东北插班生">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放东北插班生"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://pic.dianyi.ng/upload/vod/20220608-1/6779050b7aa6712d96a30a1019f0ce21.jpg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="东北插班生">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -387,7 +387,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放束手就擒吧！韩队长"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc00200fvpjijc1693376127542/0" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="束手就擒吧！韩队长">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放束手就擒吧！韩队长"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc00200fvpjijc1693376127542/0" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="束手就擒吧！韩队长">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -426,7 +426,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放封神训练营"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://m.ykimg.com/052600006510F32E13EB66D01858C016" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神训练营">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放封神训练营"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://m.ykimg.com/052600006510F32E13EB66D01858C016" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神训练营">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -465,7 +465,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="play.html" title="立刻播放东北插班生"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.haiwaikan.com/ximgs/cc55f6fcd58a978726025541a8214bc139a03b362276763b816748d01042a4a78b586ddbc4aa5b55ab9d6fed694ec801.jpg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="东北插班生">
+                                <div class="module-item-pic"><a href="play.html" title="立刻播放东北插班生"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.haiwaikan.com/ximgs/cc55f6fcd58a978726025541a8214bc139a03b362276763b816748d01042a4a78b586ddbc4aa5b55ab9d6fed694ec801.jpg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="东北插班生">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -504,7 +504,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="/play.html" title="立刻播放封神训练营直拍版"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.lzzyimg.com/upload/vod/20231013-1/c038fe3e2767a34a95a48141dde4a504.jpeg" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神训练营直拍版">
+                                <div class="module-item-pic"><a href="/play.html" title="立刻播放封神训练营直拍版"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://img.lzzyimg.com/upload/vod/20231013-1/c038fe3e2767a34a95a48141dde4a504.jpeg" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神训练营直拍版">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -543,7 +543,7 @@
                     <div class="module-search-item">
                         <div class="video-cover">
                             <div class="module-item-cover">
-                                <div class="module-item-pic"><a href="/play.html" title="立刻播放封神第一部独家纪录片"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc00200vt2rkvi1690041423895/0" src="statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神第一部独家纪录片">
+                                <div class="module-item-pic"><a href="/play.html" title="立刻播放封神第一部独家纪录片"><i class="icon-play"></i></a><img class="lazy lazyload" data-src="https://puui.qpic.cn/vcover_vt_pic/0/mzc00200vt2rkvi1690041423895/0" src="/statics/image/loading.png" onerror="javascript:this.src='/statics/image/loading.png'" alt="封神第一部独家纪录片">
                                     <div class="loading"></div>
                                 </div>
                             </div>
@@ -597,7 +597,7 @@
 </main>
 
 <footer id="footer" class="wrapper pd60">
-    <p class="sitemap"><img src="statics/picture/logo.png" height="10">
+    <p class="sitemap"><img src="{{.__STATIC__}}/picture/logo.png" height="10">
         <a target="_blank" href="/about.html">关于</a><span class="space-line-bold"></span>
         <a target="_blank" href="top.html">排行榜</a><span class="space-line-bold"></span>
         <a target="_blank" href="/map.html">MAP</a><span class="space-line-bold"></span>
