--- a/templates/default/top.html
+++ b/templates/default/top.html
@@ -16,7 +16,7 @@
     <div class="header-content">
         <div class="content">
             <div class="brand">
-                <a href="index.html" class="logo" title="电影先生"><img src="statics/picture/logo-s.png" alt="电影先生" /></a>
+                <a href="index.html" class="logo" title="电影先生"><img src="{{.__STATIC__}}/picture/logo-s.png" alt="电影先生" /></a>
             </div>
             <div class="nav-search">
                 <form action="/search.html" class="search-dh">
@@ -869,7 +869,7 @@
 
 <footer id="footer" class="wrapper pd60">
     <p class="sitemap">
-        <img src="statics/picture/logo.png" height="10" /> <a target="_blank" href="/about.html">关于</a><span class="space-line-bold"></span> <a target="_blank" href="">排行榜</a><span class="space-line-bold"></span> <a target="_blank" href="/map.html">MAP</a><span class="space-line-bold"></span> <a target="_blank" href="/rss.xml">RSS</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/baidu.xml">Baidu</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/google.xml">Google</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/bing.xml">Bing</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/so.xml">SO</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/sogou.xml">Sogou</a><span class="space-line-bold"></span>
+        <img src="{{.__STATIC__}}/picture/logo.png" height="10" /> <a target="_blank" href="/about.html">关于</a><span class="space-line-bold"></span> <a target="_blank" href="">排行榜</a><span class="space-line-bold"></span> <a target="_blank" href="/map.html">MAP</a><span class="space-line-bold"></span> <a target="_blank" href="/rss.xml">RSS</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/baidu.xml">Baidu</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/google.xml">Google</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/bing.xml">Bing</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/so.xml">SO</a><span class="space-line-bold"></span> <a target="_blank" href="/rss/sogou.xml">Sogou</a><span class="space-line-bold"></span>
         <a target="_blank" href="/rss/sm.xml">SM</a>
     </p>
     <p>本站所有内容均来自互联网分享站点所提供的公开引用资源，未提供影视资源上传、存储服务。</p>
