--- a/templates/default/v/dianying.html
+++ b/templates/default/v/dianying.html
@@ -1,183 +1,7 @@
 {{ define "v/dianying.html" }}
-{{template "html" .}}
-<html lang="zh-cn">
-<head>
-    <title>最新最新电影,经典电影,热门电影,高分电影-电影先生-推荐最新电影,经典电影,热门电影,高分电影-电影先生-第1页 -
-        电影先生</title>
-    <meta content="电影,电影大全,电影天堂,最新电影,好看的电影,电影排行榜,电影先生" name="keywords">
-    <meta content="为您提供更新电影、好看的电影排行榜及电影迅雷下载，免费在线观看伦理电影、动作片、喜剧片、爱情片、搞笑片等全新电影。"
-          name="description">
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
-    <meta content="always" name="referrer">
-    <meta content="no-referrer" name="referrer">
-    {{template "header" .}}
-</head>
+{{template "head" .}}
 <body class="page">
-<header class="wrapper" id="header">
-    <div class="header-content  ">
-        <div class="content">
-            <div class="brand">
-                <a class="logo" href="../index.html" title="电影先生"><img alt="电影先生"
-                                                                           src="{{.__STATIC__}}/picture/logo-s.png"></a>
-            </div>
-
-            <div class="nav-search">
-                <form action="/search.html" class="search-dh">
-                    <div class="search-box"><input autocomplete="off" class="search-input ac_wd txtKeywords" name="wd"
-                                                   placeholder="搜索电影、电视剧、综艺、动漫、演员" type="text">
-                        <div class="search-drop">
-                            <div class="drop-content-items ac_hot none">
-                                <div class="list-item list-item-title"><strong>大家都在搜这些影片</strong></div>
-                                <div class="search-tag">
-                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>一念关山</a>
-                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>神隐</a>
-                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>鸣龙少年</a>
-                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>南海归墟</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>坚如磐石</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>脱轨</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>斗破苍穹之少年归来</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>热烈</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>涉过愤怒的海</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>93国际列车大劫案：莫斯科行动</a>
-                                    <a class="" href="../search.html"><i class="icon-hot"></i>志愿军：雄兵出击</a>
-                                </div>
-                            </div>
-                        </div>
-                        <a class="search-btn search-cupfox" href="../top.html" id="search-cupfox"
-                           title="电影先生排行榜"><i class="icon-cupfox phb"></i><span>搜全网</span></a>
-                        <button class="search-btn search-go" type="submit"><i class="icon-search"></i></button>
-                        <button class="cancel-btn" type="button">取消</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="nav">
-                <ul class="nav-menu-items">
-                    <li class="nav-menu-item ">
-                        <a href="../index.html" title="电影先生首页">
-                            <span class="nav-menu-item-name">首页</span></a>
-                    </li>
-                    <li class="nav-menu-item  selected">
-                        <a href="" title="电影">
-
-                            <span class="nav-menu-item-name">电影</span></a>
-                    </li>
-                    <li class="nav-menu-item  ">
-                        <a href="dianshiju.html" title="电视剧">
-
-                            <span class="nav-menu-item-name">电视剧</span></a>
-                    </li>
-                    <li class="nav-menu-item  ">
-                        <a href="dongman.html" title="动漫">
-
-                            <span class="nav-menu-item-name">动漫</span></a>
-                    </li>
-                    <li class="nav-menu-item  ">
-                        <a href="zongyi.html" title="综艺">
-
-                            <span class="nav-menu-item-name">综艺</span></a>
-                    </li>
-                    <li class="nav-menu-item  ">
-                        <a href="../arttype/zixun.html" title="资讯">
-
-                            <span class="nav-menu-item-name">资讯</span></a>
-                    </li>
-
-                    <li class="nav-menu-item  domain plus">
-                        <a href="../web.html" title="电影先生最新域名">
-
-                            <span class="nav-menu-item-name">网址</span><em>+</em></a>
-                    </li>
-
-                    <li class="nav-menu-item  ">
-                        <a href="../label/app.html" title="下载电影先生APP"><i class="icon-app pc"></i><span
-                                class="nav-menu-item-name">APP</span></a>
-                    </li>
-
-                </ul>
-            </div>
-            <div class="header-module">
-                <ul class="nav-menu-items">
-                    <li class="nav-menu-item drop"><span class="nav-menu-icon"><i class="icon-all"></i></span>
-                        <div class="drop-content sub-block">
-                            <div class="drop-content-box grid-box">
-                                <ul class="drop-content-items grid-items">
-                                    <li class="grid-item">
-                                        <a href="../index.html"><i class="icon-home"></i>
-                                            <div class="grid-item-name" title="电影先生首页">首页</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="" title="电影">
-                                            <i class="icon-cate-dy"></i>
-                                            <div class="grid-item-name">电影</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="dianshiju.html" title="电视剧">
-                                            <i class="icon-cate-ds"></i>
-                                            <div class="grid-item-name">电视剧</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="dongman.html" title="动漫">
-                                            <i class="icon-cate-dm"></i>
-                                            <div class="grid-item-name">动漫</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="zongyi.html" title="综艺">
-                                            <i class="icon-cate-zy"></i>
-                                            <div class="grid-item-name">综艺</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="../arttype/zixun.html" title="资讯">
-                                            <i class="iconfont icon-zixun2"></i>
-                                            <div class="grid-item-name">资讯</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item">
-                                        <a href="../web.html"><i class="icon-domain"></i>
-                                            <div class="grid-item-name" title="网址">网址</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item grid-more">
-                                        <a class="grid-more-link" href="/pianku.html" title="查看全部影片">
-                                            <div class="grid-item-name">全部影片</div>
-                                        </a>
-                                    </li>
-                                    <li class="grid-item grid-more android">
-                                        <a class="grid-more-link" href="../label/app.html" title="下载电影先生APP">
-                                            <div class="grid-item-name">下载客户端</div>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="shortcuts-mobile-overlay"></div>
-                    </li>
-
-                    <li class="nav-menu-item nav-menu-search"><i class="icon-search"></i></li>
-                    <li class="space-line-bold"></li>
-                    <li class="nav-menu-item drop"><span class="nav-menu-icon"><i class="icon-watch-history"></i></span>
-                        <div class="drop-content drop-history">
-                            <div class="drop-content-box">
-                                <ul class="drop-content-items" id="history">
-                                    <li class="list-item list-item-title">
-                                        <a class="playlist historyclean" href=""><i class="icon-clear"></i></a>
-                                        <strong>我的观影记录</strong></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="shortcuts-mobile-overlay"></div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
+{{template "header" .}}
 
 <!-- 头部 -->
 <main class="wrapper" id="main">
@@ -17331,79 +17155,8 @@
                 class="icon-arrow-right-o"></i></a>
     </div>
 </main>
-<footer class="wrapper pd60" id="footer">
-    <p class="sitemap"><img height="10" src="{{.__STATIC__}}/picture/logo.png">
-        <a href="/about.html" target="_blank">关于</a><span class="space-line-bold"></span>
-        <a href="../top.html" target="_blank">排行榜</a><span class="space-line-bold"></span>
-        <a href="/map.html" target="_blank">MAP</a><span class="space-line-bold"></span>
-        <a href="/rss.xml" target="_blank">RSS</a><span class="space-line-bold"></span>
-        <a href="/rss/baidu.xml" target="_blank">Baidu</a><span class="space-line-bold"></span>
-        <a href="/rss/google.xml" target="_blank">Google</a><span class="space-line-bold"></span>
-        <a href="/rss/bing.xml" target="_blank">Bing</a><span class="space-line-bold"></span>
-        <a href="/rss/so.xml" target="_blank">SO</a><span class="space-line-bold"></span>
-        <a href="/rss/sogou.xml" target="_blank">Sogou</a><span class="space-line-bold"></span>
-        <a href="/rss/sm.xml" target="_blank">SM</a>
-    </p>
-    <p>本站所有内容均来自互联网分享站点所提供的公开引用资源，未提供影视资源上传、存储服务。</p>
-</footer>
 
-
-<div class="fixed_right_bar">
-    <div class="mx-lrmenu">
-        <div class="ant-back-top dbicon" style="display:none;">
-            <i class="iconfont icon-a-zhiding5"></i>
-        </div>
-        <div class="dbicon">
-            <a href="#" id="numerous" style="color: #ffffff; font-weight: bold;" title="切換到繁體中文">繁</a>
-        </div>
-        <div class="dbicon" id="clothes" onclick="clothesChange();">
-
-            <i class="iconfont icon-a-yejian2"></i>
-        </div>
-        <div class="dbicon ly">
-            <a href="/gbook.html"><i class="iconfont icon-a-pinglun"></i></a>
-        </div>
-        <div class="dbicon">
-            <a href="/topic.html"><i class="iconfont icon-zhuanti-2"></i></a>
-        </div>
-    </div>
-    <div class="moremeum">
-        <i class="iconfont icon-a-gengduo1"></i>
-    </div>
-</div>
-<div class="mxonefoot">
-    <a class="item" href="../index.html">
-        <i class="icon-home size20"></i>
-        <div class="grid-item-name" title="电影先生首页">首页</div>
-    </a>
-
-    <a class="item" href="">
-        <i class="size20 icon-cate-dy"></i>
-        <div class="grid-item-name">电影</div>
-    </a>
-
-    <a class="item" href="dianshiju.html">
-        <i class="size20 icon-cate-ds"></i>
-        <div class="grid-item-name">电视剧</div>
-    </a>
-
-    <a class="item" href="dongman.html">
-        <i class="size20 icon-cate-dm"></i>
-        <div class="grid-item-name">动漫</div>
-    </a>
-
-    <a class="item" href="zongyi.html">
-        <i class="size20 icon-cate-zy"></i>
-        <div class="grid-item-name">综艺</div>
-    </a>
-
-    <a class="item" href="../arttype/zixun.html">
-        <i class="size20 iconfont icon-zixun2"></i>
-        <div class="grid-item-name">资讯</div>
-    </a>
-</div>
-
-
+{{template "footer" .}}
 {{template "popup" .}}
 {{template "javascript" .}}
 </body>
